<resources>
    <string name="app_name">Lit Finder</string>
    <string name="title_bookshelf">Rak Buku</string>
    <string name="total_list_buku">%1$d Buku</string>
    <string name="title_discover">Temukan Bacaan Anda Selanjutnya</string>
    <string name="sub_title_discover">Suasana hati Anda</string>
    <string name="data_title_book">The School for Good and Evil</string>
    <string name="data_publiser">Oleh Chainani Soman</string>
    <string name="rilis_new">Rilis Baru</string>
    <string name="title_book_for_you">Buku Untukmu</string>
    <string name="title_design_banner">Desain Banner</string>
    <string name="button_share">"Bagikan Aktivitas "</string>
    <string name="tab_text_belanja">Belanja Buku Ini</string>
    <string name="status">Status</string>
    <string name="judul">Judul Buku</string>
    <string name="penulis">Penulis : Nama Penulis</string>
    <string name="genre">Genre : Genre dari buku\n</string>
    <string name="deskripsi">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="name_ulasan">Nama</string>
    <string name="deskripsi_ulasan">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua... "</string>
    <string name="promition">Yang lainnya juga menyukai buku ini!</string>
    <string name="choose_book">Pilih Buku</string>
    <string name="desc_choose_book">Pilih Buku yang menarik bagimu yang pernah kamu baca!</string>
    <string name="search">Cari…</string>
    <string name="skip">Lewati</string>
    <string name="next">Lanjut</string>
    <string name="account">Akun</string>
    <string name="personal_details">Detail Pribadi</string>
    <string name="name">Nama</string>
    <string name="bio">Bio</string>
    <string name="pass_and_security">Kata sandi dan keamanan</string>
    <string name="change_password">Ubah kata sandi</string>
    <string name="choose_genre">Pilih Genre</string>
    <string name="desc_choose_genre">Pilih 3 Genre Buku yang menarik bagimu!</string>
    <string name="Login">Masuk</string>
    <string name="desc_login">Silahkan masukkan Data Anda</string>
    <string name="username_email">Username/Email</string>
    <string name="password">Password</string>
    <string name="register">Daftar</string>
    <string name="hello">Halo</string>
    <string name="desc_main">Sedang ingin baca apa?</string>
    <string name="for_you_book">Buku Untukmu</string>
    <string name="on_trending">Lagi Trending</string>
    <string name="newly_released_book">Buku yang baru dirilis</string>
    <string name="my_profile">Profil Saya</string>
    <string name="menu">Menu</string>
    <string name="preferences">Preferences</string>
    <string name="logout">Keluar</string>
    <string name="desc_register">Silahkan masukkan Data Anda</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="change_preference">Ubah Preference</string>
    <string name="save">Simpan</string>
    <string name="forget_password">Lupa Sandi?</string>
    <string name="empty_form">Please fill in the form fields</string>
    <string name="invalid_form">Please fill in the form data according to the requirements</string>
    <string name="rating_tertinggi">Rating Tertinggi</string>
    <string name="hintForBookMood">Cari buku sesuai suasana hati anda</string>
    <string name="title_search">Temukan</string>
    <string name="ingin">Ingin</string>
    <string name="baca">Baca</string>
    <string name="selesai">Selesai</string>
    <string name="ulasan_rating">Ulasan</string>
    <string name="email_invalid_message">Invalid Email</string>
    <string name="password_length_message">Password must be at least 8 characters long</string>
    <string name="logout_success_message">Logout berhasil</string>
    <string name="retry">Retry</string>
    <string name="please_fill_data">Isi Data terlebih dahulu</string>
    <string name="login_success">Login berhasil</string>
    <string name="error_unknown">Error</string>
    <string name="login_failed">Login Gagal! Email atau password Anda salah</string>
    <string name="registration_failed">Registrasi gagal</string>
    <string name="email_in_use">Email/username sudah terdaftar. Gunakan email/username yang berbeda!</string>
    <string name="register_success">Registrasi berhasil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_bio">Ubah Bio</string>
    <string name="enter_new_bio">Masukkan Bio yang baru</string>
    <string name="change_name">Ubah Nama</string>
    <string name="enter_new_name">Masukkan Nama yang baru</string>
    <string name="enter_current_password">Masukkan password lama Anda</string>
    <string name="enter_new_password">Masukkan password baru Anda</string>
    <string name="confirm_new_password">Masukkan password sekali lagi</string>
    <string name="bio_text">Bio masih kosong!</string>
    <string name="password_mismatch_message">Konfirmasi Password berbeda</string>
    <string name="password_changed_successfully">Password berhasil diubah</string>
    <string name="password_already_same">Password Anda sudah sama seperti password sebelumnya</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="verifikasi_kode">Verifikasi Kode</string>
    <string name="masukkan_kode_verifikasi">Masukkan Kode Verifikasi</string>
    <string name="kode_verifikasi_sudah_dikirim_ke_email_anda">Kode verifikasi sudah dikirim ke Email Anda.</string>
    <string name="hint_text_bookself">Cari buku di rak Anda</string>
    <string name="berdasarkan_yang_kamu_review">Berdasarkan yang kamu review</string>
    <string name="empty_recommendation">Buku rekomendasi kosong! Silahkan review minimal 1 buku</string>
</resources>