<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/textViewChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:paddingHorizontal="24dp"
        android:text="@string/change_password"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextCurrentPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="24dp"
        android:hint="@string/enter_current_password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/textViewChangePassword" />

    <EditText
        android:id="@+id/editTextNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="24dp"
        android:hint="@string/enter_new_password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/editTextCurrentPassword" />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="24dp"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/editTextNewPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSavePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/solid_button"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAllCaps="false"/>
</androidx.constraintlayout.widget.ConstraintLayout>
