<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:paddingVertical="20dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/header"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        android:paddingHorizontal="20dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="left|center"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/back_to_profile"
                android:src="@drawable/ic_back"
                android:padding="10dp"
                android:clickable="true"
                android:rotation="180"
                android:background="?android:attr/selectableItemBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
            android:layout_centerInParent="true"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_medium"
            android:textColor="?attr/colorSecondary"
            android:textStyle="bold"
            android:text="@string/change_preference"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="right"
            android:layout_height="match_parent">
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/choose_genre"
        android:textColor="@color/primary70"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <TextView
        android:id="@+id/tv_deskripsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/desc_choose_genre"
        android:textColor="@color/primary70"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_judul" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_simpan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_deskripsi">


    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_simpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/solid_button"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAllCaps="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>